// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table Basic render 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  max-width: 100%;
  overflow-x: auto;
  overflow-y: hidden;
  white-space: nowrap;
}

.c1 {
  border: none;
}

.c1 td,
.c1 th {
  padding: calc(0.8em * 1) 1em;
}

.c2 {
  border: none;
}

.c2 > :first-child {
  border-left: none;
}

.c2 > :last-child {
  border-right: none;
}

.c3 {
  border-top: none;
  border-bottom: none;
  padding: 0;
  text-align: left;
  position: relative;
  font-weight: 500;
  text-align: left;
}

.c5 {
  border: none;
  padding: 0;
  text-align: left;
  border-bottom: 1px solid hsla(214,32%,91%,1);
  text-align: left;
}

.c4 {
  position: absolute;
  top: 0;
  right: 0;
  width: 3px;
  cursor: col-resize;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  height: 100%;
}

.c4:hover,
.c4.resizing {
  background-color: hsla(330,81%,60%,1);
}

<body>
    <div>
      <div
        class="c0"
      >
        <table
          class="c1"
          role="table"
        >
          <thead
            class=""
          >
            <tr
              class="c2"
              role="row"
            >
              <th
                class="c3"
                role="cell"
              >
                <div>
                  Col 1
                </div>
                <div
                  class="c4"
                  role="slider"
                />
              </th>
              <th
                class="c3"
                role="cell"
              >
                Col 2
                <div
                  class="c4"
                  role="slider"
                />
              </th>
            </tr>
          </thead>
          <tbody
            class=""
          >
            <tr
              class="c2"
              role="row"
            >
              <td
                class="c5"
                role="cell"
              >
                <div>
                  Val 1
                </div>
              </td>
              <td
                class="c5"
                role="cell"
              >
                Val 2
              </td>
            </tr>
          </tbody>
          <tfoot
            class=""
          />
        </table>
      </div>
    </div>
  </body>,
  "container": .c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  max-width: 100%;
  overflow-x: auto;
  overflow-y: hidden;
  white-space: nowrap;
}

.c1 {
  border: none;
}

.c1 td,
.c1 th {
  padding: calc(0.8em * 1) 1em;
}

.c2 {
  border: none;
}

.c2 > :first-child {
  border-left: none;
}

.c2 > :last-child {
  border-right: none;
}

.c3 {
  border-top: none;
  border-bottom: none;
  padding: 0;
  text-align: left;
  position: relative;
  font-weight: 500;
  text-align: left;
}

.c5 {
  border: none;
  padding: 0;
  text-align: left;
  border-bottom: 1px solid hsla(214,32%,91%,1);
  text-align: left;
}

.c4 {
  position: absolute;
  top: 0;
  right: 0;
  width: 3px;
  cursor: col-resize;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  height: 100%;
}

.c4:hover,
.c4.resizing {
  background-color: hsla(330,81%,60%,1);
}

<div>
    <div
      class="c0"
    >
      <table
        class="c1"
        role="table"
      >
        <thead
          class=""
        >
          <tr
            class="c2"
            role="row"
          >
            <th
              class="c3"
              role="cell"
            >
              <div>
                Col 1
              </div>
              <div
                class="c4"
                role="slider"
              />
            </th>
            <th
              class="c3"
              role="cell"
            >
              Col 2
              <div
                class="c4"
                role="slider"
              />
            </th>
          </tr>
        </thead>
        <tbody
          class=""
        >
          <tr
            class="c2"
            role="row"
          >
            <td
              class="c5"
              role="cell"
            >
              <div>
                Val 1
              </div>
            </td>
            <td
              class="c5"
              role="cell"
            >
              Val 2
            </td>
          </tr>
        </tbody>
        <tfoot
          class=""
        />
      </table>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Table Caption 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  max-width: 100%;
  overflow-x: auto;
  overflow-y: hidden;
  white-space: nowrap;
}

.c1 {
  border: none;
}

.c1 td,
.c1 th {
  padding: calc(0.8em * 1) 1em;
}

.c2 {
  border: none;
}

.c2 > :first-child {
  border-left: none;
}

.c2 > :last-child {
  border-right: none;
}

.c3 {
  border-top: none;
  border-bottom: none;
  padding: 0;
  text-align: left;
  position: relative;
  font-weight: 500;
  text-align: left;
}

.c5 {
  border: none;
  padding: 0;
  text-align: left;
  border-bottom: 1px solid hsla(214,32%,91%,1);
  text-align: left;
}

.c4 {
  position: absolute;
  top: 0;
  right: 0;
  width: 3px;
  cursor: col-resize;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  height: 100%;
}

.c4:hover,
.c4.resizing {
  background-color: hsla(330,81%,60%,1);
}

.c6 {
  font-size: 0.75rem;
  font-weight: 400;
  -webkit-letter-spacing: 0.03333em;
  -moz-letter-spacing: 0.03333em;
  -ms-letter-spacing: 0.03333em;
  letter-spacing: 0.03333em;
  line-height: 1.66;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 100%;
  padding: 1rem 2rem;
}

<body>
    <div>
      <div
        class="c0"
      >
        <table
          class="c1"
          role="table"
        >
          <thead
            class=""
          >
            <tr
              class="c2"
              role="row"
            >
              <th
                class="c3"
                role="cell"
              >
                <div>
                  Col 1
                </div>
                <div
                  class="c4"
                  role="slider"
                />
              </th>
              <th
                class="c3"
                role="cell"
              >
                Col 2
                <div
                  class="c4"
                  role="slider"
                />
              </th>
            </tr>
          </thead>
          <tbody
            class=""
          >
            <tr
              class="c2"
              role="row"
            >
              <td
                class="c5"
                role="cell"
              >
                <div>
                  Val 1
                </div>
              </td>
              <td
                class="c5"
                role="cell"
              >
                Val 2
              </td>
            </tr>
          </tbody>
          <tfoot
            class=""
          />
        </table>
        <div
          class="c6"
        >
          sample caption
        </div>
      </div>
    </div>
  </body>,
  "container": .c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  max-width: 100%;
  overflow-x: auto;
  overflow-y: hidden;
  white-space: nowrap;
}

.c1 {
  border: none;
}

.c1 td,
.c1 th {
  padding: calc(0.8em * 1) 1em;
}

.c2 {
  border: none;
}

.c2 > :first-child {
  border-left: none;
}

.c2 > :last-child {
  border-right: none;
}

.c3 {
  border-top: none;
  border-bottom: none;
  padding: 0;
  text-align: left;
  position: relative;
  font-weight: 500;
  text-align: left;
}

.c5 {
  border: none;
  padding: 0;
  text-align: left;
  border-bottom: 1px solid hsla(214,32%,91%,1);
  text-align: left;
}

.c4 {
  position: absolute;
  top: 0;
  right: 0;
  width: 3px;
  cursor: col-resize;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  height: 100%;
}

.c4:hover,
.c4.resizing {
  background-color: hsla(330,81%,60%,1);
}

.c6 {
  font-size: 0.75rem;
  font-weight: 400;
  -webkit-letter-spacing: 0.03333em;
  -moz-letter-spacing: 0.03333em;
  -ms-letter-spacing: 0.03333em;
  letter-spacing: 0.03333em;
  line-height: 1.66;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 100%;
  padding: 1rem 2rem;
}

<div>
    <div
      class="c0"
    >
      <table
        class="c1"
        role="table"
      >
        <thead
          class=""
        >
          <tr
            class="c2"
            role="row"
          >
            <th
              class="c3"
              role="cell"
            >
              <div>
                Col 1
              </div>
              <div
                class="c4"
                role="slider"
              />
            </th>
            <th
              class="c3"
              role="cell"
            >
              Col 2
              <div
                class="c4"
                role="slider"
              />
            </th>
          </tr>
        </thead>
        <tbody
          class=""
        >
          <tr
            class="c2"
            role="row"
          >
            <td
              class="c5"
              role="cell"
            >
              <div>
                Val 1
              </div>
            </td>
            <td
              class="c5"
              role="cell"
            >
              Val 2
            </td>
          </tr>
        </tbody>
        <tfoot
          class=""
        />
      </table>
      <div
        class="c6"
      >
        sample caption
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Table Dark mode basic render 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  max-width: 100%;
  overflow-x: auto;
  overflow-y: hidden;
  white-space: nowrap;
}

.c1 {
  border: none;
}

.c1 td,
.c1 th {
  padding: calc(0.8em * 1) 1em;
}

.c2 {
  border: none;
}

.c2 > :first-child {
  border-left: none;
}

.c2 > :last-child {
  border-right: none;
}

.c3 {
  border-top: none;
  border-bottom: none;
  padding: 0;
  text-align: left;
  position: relative;
  font-weight: 500;
  text-align: left;
}

.c5 {
  border: none;
  padding: 0;
  text-align: left;
  border-bottom: 1px solid hsla(214,32%,91%,1);
  text-align: left;
}

.c4 {
  position: absolute;
  top: 0;
  right: 0;
  width: 3px;
  cursor: col-resize;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  height: 100%;
}

.c4:hover,
.c4.resizing {
  background-color: hsla(330,81%,60%,1);
}

<body>
    <div>
      <div
        class="c0"
      >
        <table
          class="c1"
          role="table"
        >
          <thead
            class=""
          >
            <tr
              class="c2"
              role="row"
            >
              <th
                class="c3"
                role="cell"
              >
                <div>
                  Col 1
                </div>
                <div
                  class="c4"
                  role="slider"
                />
              </th>
              <th
                class="c3"
                role="cell"
              >
                Col 2
                <div
                  class="c4"
                  role="slider"
                />
              </th>
            </tr>
          </thead>
          <tbody
            class=""
          >
            <tr
              class="c2"
              role="row"
            >
              <td
                class="c5"
                role="cell"
              >
                <div>
                  Val 1
                </div>
              </td>
              <td
                class="c5"
                role="cell"
              >
                Val 2
              </td>
            </tr>
          </tbody>
          <tfoot
            class=""
          />
        </table>
      </div>
    </div>
  </body>,
  "container": .c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  max-width: 100%;
  overflow-x: auto;
  overflow-y: hidden;
  white-space: nowrap;
}

.c1 {
  border: none;
}

.c1 td,
.c1 th {
  padding: calc(0.8em * 1) 1em;
}

.c2 {
  border: none;
}

.c2 > :first-child {
  border-left: none;
}

.c2 > :last-child {
  border-right: none;
}

.c3 {
  border-top: none;
  border-bottom: none;
  padding: 0;
  text-align: left;
  position: relative;
  font-weight: 500;
  text-align: left;
}

.c5 {
  border: none;
  padding: 0;
  text-align: left;
  border-bottom: 1px solid hsla(214,32%,91%,1);
  text-align: left;
}

.c4 {
  position: absolute;
  top: 0;
  right: 0;
  width: 3px;
  cursor: col-resize;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  height: 100%;
}

.c4:hover,
.c4.resizing {
  background-color: hsla(330,81%,60%,1);
}

<div>
    <div
      class="c0"
    >
      <table
        class="c1"
        role="table"
      >
        <thead
          class=""
        >
          <tr
            class="c2"
            role="row"
          >
            <th
              class="c3"
              role="cell"
            >
              <div>
                Col 1
              </div>
              <div
                class="c4"
                role="slider"
              />
            </th>
            <th
              class="c3"
              role="cell"
            >
              Col 2
              <div
                class="c4"
                role="slider"
              />
            </th>
          </tr>
        </thead>
        <tbody
          class=""
        >
          <tr
            class="c2"
            role="row"
          >
            <td
              class="c5"
              role="cell"
            >
              <div>
                Val 1
              </div>
            </td>
            <td
              class="c5"
              role="cell"
            >
              Val 2
            </td>
          </tr>
        </tbody>
        <tfoot
          class=""
        />
      </table>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Table Dark mode striped render 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  max-width: 100%;
  overflow-x: auto;
  overflow-y: hidden;
  white-space: nowrap;
}

.c1 {
  border: none;
}

.c1 tr:nth-child(even) td {
  background-color: hsla(220,14%,96%,0.8);
}

.c1 tr:nth-child(odd) td {
  background-color: hsla(220,13%,91%,0.8);
}

.c1 td,
.c1 th {
  padding: calc(0.8em * 1) 1em;
}

.c2 {
  border: none;
}

.c2 > :first-child {
  border-left: none;
}

.c2 > :last-child {
  border-right: none;
}

.c3 {
  border-top: none;
  border-bottom: none;
  padding: 0;
  text-align: left;
  position: relative;
  font-weight: 500;
  text-align: left;
}

.c5 {
  border: none;
  padding: 0;
  text-align: left;
  border-bottom: 1px solid hsla(214,32%,91%,1);
  text-align: left;
}

.c4 {
  position: absolute;
  top: 0;
  right: 0;
  width: 3px;
  cursor: col-resize;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  height: 100%;
}

.c4:hover,
.c4.resizing {
  background-color: hsla(330,81%,60%,1);
}

<body>
    <div>
      <div
        class="c0"
      >
        <table
          class="c1"
          role="table"
        >
          <thead
            class=""
          >
            <tr
              class="c2"
              role="row"
            >
              <th
                class="c3"
                role="cell"
              >
                <div>
                  Col 1
                </div>
                <div
                  class="c4"
                  role="slider"
                />
              </th>
              <th
                class="c3"
                role="cell"
              >
                Col 2
                <div
                  class="c4"
                  role="slider"
                />
              </th>
            </tr>
          </thead>
          <tbody
            class=""
          >
            <tr
              class="c2"
              role="row"
            >
              <td
                class="c5"
                role="cell"
              >
                <div>
                  Val 1
                </div>
              </td>
              <td
                class="c5"
                role="cell"
              >
                Val 2
              </td>
            </tr>
          </tbody>
          <tfoot
            class=""
          />
        </table>
      </div>
    </div>
  </body>,
  "container": .c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  max-width: 100%;
  overflow-x: auto;
  overflow-y: hidden;
  white-space: nowrap;
}

.c1 {
  border: none;
}

.c1 tr:nth-child(even) td {
  background-color: hsla(220,14%,96%,0.8);
}

.c1 tr:nth-child(odd) td {
  background-color: hsla(220,13%,91%,0.8);
}

.c1 td,
.c1 th {
  padding: calc(0.8em * 1) 1em;
}

.c2 {
  border: none;
}

.c2 > :first-child {
  border-left: none;
}

.c2 > :last-child {
  border-right: none;
}

.c3 {
  border-top: none;
  border-bottom: none;
  padding: 0;
  text-align: left;
  position: relative;
  font-weight: 500;
  text-align: left;
}

.c5 {
  border: none;
  padding: 0;
  text-align: left;
  border-bottom: 1px solid hsla(214,32%,91%,1);
  text-align: left;
}

.c4 {
  position: absolute;
  top: 0;
  right: 0;
  width: 3px;
  cursor: col-resize;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  height: 100%;
}

.c4:hover,
.c4.resizing {
  background-color: hsla(330,81%,60%,1);
}

<div>
    <div
      class="c0"
    >
      <table
        class="c1"
        role="table"
      >
        <thead
          class=""
        >
          <tr
            class="c2"
            role="row"
          >
            <th
              class="c3"
              role="cell"
            >
              <div>
                Col 1
              </div>
              <div
                class="c4"
                role="slider"
              />
            </th>
            <th
              class="c3"
              role="cell"
            >
              Col 2
              <div
                class="c4"
                role="slider"
              />
            </th>
          </tr>
        </thead>
        <tbody
          class=""
        >
          <tr
            class="c2"
            role="row"
          >
            <td
              class="c5"
              role="cell"
            >
              <div>
                Val 1
              </div>
            </td>
            <td
              class="c5"
              role="cell"
            >
              Val 2
            </td>
          </tr>
        </tbody>
        <tfoot
          class=""
        />
      </table>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Table Striped render 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  max-width: 100%;
  overflow-x: auto;
  overflow-y: hidden;
  white-space: nowrap;
}

.c1 {
  border: none;
}

.c1 tr:nth-child(even) td {
  background-color: hsla(220,14%,96%,0.8);
}

.c1 tr:nth-child(odd) td {
  background-color: hsla(220,13%,91%,0.8);
}

.c1 td,
.c1 th {
  padding: calc(0.8em * 1) 1em;
}

.c2 {
  border: none;
}

.c2 > :first-child {
  border-left: none;
}

.c2 > :last-child {
  border-right: none;
}

.c3 {
  border-top: none;
  border-bottom: none;
  padding: 0;
  text-align: left;
  position: relative;
  font-weight: 500;
  text-align: left;
}

.c5 {
  border: none;
  padding: 0;
  text-align: left;
  border-bottom: 1px solid hsla(214,32%,91%,1);
  text-align: left;
}

.c4 {
  position: absolute;
  top: 0;
  right: 0;
  width: 3px;
  cursor: col-resize;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  height: 100%;
}

.c4:hover,
.c4.resizing {
  background-color: hsla(330,81%,60%,1);
}

<body>
    <div>
      <div
        class="c0"
      >
        <table
          class="c1"
          role="table"
        >
          <thead
            class=""
          >
            <tr
              class="c2"
              role="row"
            >
              <th
                class="c3"
                role="cell"
              >
                <div>
                  Col 1
                </div>
                <div
                  class="c4"
                  role="slider"
                />
              </th>
              <th
                class="c3"
                role="cell"
              >
                Col 2
                <div
                  class="c4"
                  role="slider"
                />
              </th>
            </tr>
          </thead>
          <tbody
            class=""
          >
            <tr
              class="c2"
              role="row"
            >
              <td
                class="c5"
                role="cell"
              >
                <div>
                  Val 1
                </div>
              </td>
              <td
                class="c5"
                role="cell"
              >
                Val 2
              </td>
            </tr>
          </tbody>
          <tfoot
            class=""
          />
        </table>
      </div>
    </div>
  </body>,
  "container": .c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  max-width: 100%;
  overflow-x: auto;
  overflow-y: hidden;
  white-space: nowrap;
}

.c1 {
  border: none;
}

.c1 tr:nth-child(even) td {
  background-color: hsla(220,14%,96%,0.8);
}

.c1 tr:nth-child(odd) td {
  background-color: hsla(220,13%,91%,0.8);
}

.c1 td,
.c1 th {
  padding: calc(0.8em * 1) 1em;
}

.c2 {
  border: none;
}

.c2 > :first-child {
  border-left: none;
}

.c2 > :last-child {
  border-right: none;
}

.c3 {
  border-top: none;
  border-bottom: none;
  padding: 0;
  text-align: left;
  position: relative;
  font-weight: 500;
  text-align: left;
}

.c5 {
  border: none;
  padding: 0;
  text-align: left;
  border-bottom: 1px solid hsla(214,32%,91%,1);
  text-align: left;
}

.c4 {
  position: absolute;
  top: 0;
  right: 0;
  width: 3px;
  cursor: col-resize;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  height: 100%;
}

.c4:hover,
.c4.resizing {
  background-color: hsla(330,81%,60%,1);
}

<div>
    <div
      class="c0"
    >
      <table
        class="c1"
        role="table"
      >
        <thead
          class=""
        >
          <tr
            class="c2"
            role="row"
          >
            <th
              class="c3"
              role="cell"
            >
              <div>
                Col 1
              </div>
              <div
                class="c4"
                role="slider"
              />
            </th>
            <th
              class="c3"
              role="cell"
            >
              Col 2
              <div
                class="c4"
                role="slider"
              />
            </th>
          </tr>
        </thead>
        <tbody
          class=""
        >
          <tr
            class="c2"
            role="row"
          >
            <td
              class="c5"
              role="cell"
            >
              <div>
                Val 1
              </div>
            </td>
            <td
              class="c5"
              role="cell"
            >
              Val 2
            </td>
          </tr>
        </tbody>
        <tfoot
          class=""
        />
      </table>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
